arreglado scroll horizontal y linkeados los botones

--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
-          <a href="#"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
+          <a href="index.html"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
         </div>
         <button class="navbar-toggler navbar-dark border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,7 @@
   
   <main>
     <div class="contenedor">
-      <div class="row">
+      <div class="row g-0">
           <div class="col-sm-12 text-center text-light fw-bold text mt-3 mb-3">
             <h1>CONTÁCTANOS</h1>
           </div>
