--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
+              <a class="nav-link fw-bold text-light fs-5" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold text-light fs-5" href="./acerca-de.html">Acerca de</a>
