responsive en tablet arreglado

--- a/contacto.html
+++ b/contacto.html
@@ -87,14 +87,14 @@
   
   <main>
     <div class="contenedor">
-      <div class="row g-0">
+      <div class="row g-0 justify-content-around">
           <div class="col-sm-12 text-center text-light fw-bold text mt-3 mb-3">
             <h1>CONTÁCTANOS</h1>
           </div>
-          <div class="col-sm-6 d-flex justify-content-center mb-5">
+          <div class="col-sm-12 col-md-5 col-lg-6 d-flex justify-content-center mb-5">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14240.408879082126!2d-65.2072018!3d-26.8367009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1687580332124!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe"></iframe>
           </div>
-          <div class="col-sm-6 d-flex justify-content-center mb-5">
+          <div class="col-sm-12 col-md-5 col-lg-6 d-flex justify-content-center mb-5">
             <div class="card cardContacto p-3">
               <form>
                 <div class="mb-3">
