--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                   </a>
                 </div>
               </div>
+              <!-- anuncio4 -->
               <div class="card d-lg-flex d-sm-none" style="width: 18rem;">
                 <img src="./img/star-plus.jpg" class="card-img-top d-none d-md-block" alt="Spotify anuncio">
                 <div class="card-body">
