--- a/acerca-de.html
+++ b/acerca-de.html
@@ -69,49 +69,51 @@
     </div>
   </header>
   <main>
-    <h1 class=" text-center fw-bold text-light mt-4">ROLLING BOYS</h1>
-    <div class="d-flex container justify-content-center p-5">
-      <div class="card tarjets mx-3 w-25">
+    <div class="container-fluid py-2">
+      <h1 class=" text-center fw-bold text-light">ROLLING BOYS</h1>
+    </div>
+    <div class="d-flex container-fluid justify-content-center p-5 row">
+      <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
         <img src="./img/Damian-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Damián Correa">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Damián Correa</h5>
         </div>
       </div>
-      <div class="card tarjets mx-3 w-25">
+      <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
         <img src="./img/Luis-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Luis Correa">
-        <div class="card-body mt-5">
+        <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Luis Correa</h5>
         </div>
       </div>
-      <div class="card tarjets mx-3 w-25">
+      <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
         <img src="./img/Marcos-Coronel-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Marcos Coronel">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Marcos Coronel</h5>
         </div>
       </div>
-      <div class="card tarjets mx-3 w-25">
+      <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
         <img src="./img/Lucas-Fernandez.png" class="card-img-top rounded-pill img-efect" alt="Lucas Lucas Fernandez">
-        <div class="card-body mt-5">
+        <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Lucas Fernández</h5>
         </div>
       </div>
-      <div class="card tarjets mx-3 w-25">
+      <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
         <img src="./img/Ivan-Mena-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Iván Mena">
-        <div class="card-body mt-5">
-          <h5 class="card-title text-light text-center fw-bold mt-5">Iván Mena</h5>
+        <div class="card-body">
+          <h5 class="card-title text-light text-center fw-bold">Iván Mena</h5>
         </div>
       </div>
     </div>
     <div class="text-center text-dark fw-bold">
       <p class="sobre-nosotros p-sm-2">Somos un grupo de jóvenes, amantes de la tecnología en busca de un lugar dentro de la industria para el futuro. <br> Actualmente estudiamos en Rolling Code, con mucha ilusión y ganas para poder vivir de lo que más nos gusta.</p>
       <hr>
-      <div class="flex-sm-column mb-5">
+      <div class="justify-content-center flex-column align-items-center mb-5 d-none d-md-flex">
         <p class="text-light fw-bold"> Para desarrollar éste proyecto usamos:</p>
-        <div class="button-rounded-container mx-5 d-inline">
+        <div class="button-rounded-container d-flex justify-content-center">
           <a href="#" class="button-rounded">HTML</a>
           <a href="#" class="button-rounded">CSS</a>
           <a href="#" class="button-rounded">BOOTSTRAP</a>
-          <a href="" class="button-rounded">GIT & GITHUB</a>
+          <a href="#" class="button-rounded">GIT & GITHUB</a>
         </div>
       </div>
     </div>
