--- a/acerca-de.html
+++ b/acerca-de.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
-          <img src="./img/SBN-removebg-preview.png" alt="logo">
+          <a href="index.html"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -21,11 +21,11 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Suscribirse
+                Suscribite
               </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
+              <a class="nav-link fw-bold text-light fs-5" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold text-light fs-5" href="./acerca-de.html">Acerca de</a>
@@ -39,7 +39,7 @@
       <div class="modal-dialog">
         <div class="modal-content bg-dark text-white">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirse</h1>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribite</h1>
           </div>
           <div class="modal-body">
             <div>
@@ -74,31 +74,31 @@
     </div>
     <div class="d-flex container-fluid justify-content-center p-5 row">
       <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
-        <img src="./img/Damian-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Damián Correa">
+        <img src="./img/Damian-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect imgAcercaDe" alt="Damián Correa">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Damián Correa</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
-        <img src="./img/Luis-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Luis Correa">
+        <img src="./img/Luis-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect imgAcercaDe" alt="Luis Correa">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Luis Correa</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
-        <img src="./img/Marcos-Coronel-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Marcos Coronel">
+        <img src="./img/Marcos-Coronel-removebg-preview.png" class="card-img-top rounded-pill img-efect imgAcercaDe" alt="Marcos Coronel">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Marcos Coronel</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
-        <img src="./img/Lucas-Fernandez.png" class="card-img-top rounded-pill img-efect" alt="Lucas Lucas Fernandez">
+        <img src="./img/Lucas-Fernandez.png" class="card-img-top rounded-pill img-efect imgAcercaDe" alt="Lucas Lucas Fernandez">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Lucas Fernández</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 col-12 col-md-6 col-lg-2">
-        <img src="./img/Ivan-Mena-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Iván Mena">
+        <img src="./img/Ivan-Mena-removebg-preview.png" class="card-img-top rounded-pill img-efect imgAcercaDe" alt="Iván Mena">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Iván Mena</h5>
         </div>
