--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
-          <a href="#"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
+          <a href="index.html"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
         </div>
         <button class="navbar-toggler navbar-dark border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
