--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#modalSub">
                 Suscribite
               </button>
             </li>
@@ -46,10 +46,12 @@
             </li>
           </ul>
         </div>
-        <button class="btn"><img src="./img/login 2.png" alt="img-login" width="50px"></button>
+        <button class="btn">
+          <a href="login.html"><img src="./img/login 2.png" alt="img-login" width="50px"></a>
+        </button>
       </div>
     </nav>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content bg-dark text-white">
           <div class="modal-header">
