detalles menores fixeados

--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
-          <img src="./img/SBN-removebg-preview.png" alt="logo">
+          <a href="index.html"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,27 +37,30 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Suscribirse
+              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#modalSub">
+                Suscribite
               </button>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
+              <a class="nav-link fw-bold text-light fs-5" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold text-light fs-5" href="./acerca-de.html">Acerca de</a>
             </li>
           </ul>
         </div>
-        <button class="btn"><img src="./img/login 2.png" alt="img-login" width="50px"></button>
+        <button class="btn">
+          <a href="login.html"><img src="./img/login 2.png" alt="img-login" width="50px"></a>
+        </button>
       </div>
     </nav>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content bg-dark text-white">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirse</h1>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirte</h1>
           </div>
+          <p class="mx-2 mt-4 text-center">Accedé sin límites a la información más confiable del Mundo.</p>
           <div class="modal-body">
             <div>
               <form>
@@ -74,12 +77,13 @@
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
                   <label class="form-check-label" for="exampleCheck1">Recordarme</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-leer">Suscribirme</button>
               </form>
             </div>
           </div>
+          <p class="text-center mt-3">Disfrutá los beneficios de suscribirte!</p>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-leer" data-bs-dismiss="modal">Cerrar</button>
           </div>
         </div>
       </div>
@@ -206,11 +210,6 @@
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
-            <div class="d-flex justify-content-end d-md-none m-1">
-              <div class="buttonStart d-flex justify-content-center align-items-center">
-                <a href="#bodyTop">⬆</a>
-              </div>
-            </div>
           </div>
         </div>
 
@@ -222,11 +221,6 @@
           </div>
           <div class="p-1">
             <p>Blog Deportivo creado para poder mantener informado a los fanaticos del mundo de los deportes. <br> contamos con las ultimas noticias sobre los deportes mas importantes y pasionales del mundo. <br> Futbol, Rugby, Basketball, Automovilismo, Tenis, Etc. <br> Informacion actualizada de las mejores competiciones de todos los deportes</p>
-            <div class="d-flex justify-content-end align-items-end">
-              <div class="buttonStart d-flex justify-content-center align-items-center">
-                <a href="#bodyTop">⬆</a>
-              </div>
-            </div>
           </div>
         </div>
       </div>
