--- a/acerca-de.html
+++ b/acerca-de.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Blog de noticias deportivas con las últimas novedades, resultados y análisis de eventos deportivos.">
+  <meta name="keywords" content="deporte, noticias deportivas, fútbol, baloncesto, tenis, eventos deportivos">
+  <meta name="author" content="nombre del blog">
+  <meta property="og:title" content="Título del blog de noticias deportivas">
+  <meta property="og:description" content="Blog de noticias deportivas con las últimas novedades, resultados y análisis de eventos deportivos.">
+  <meta property="og:image" content="ruta-a-tu-imagen.jpg">
+  <meta property="og:url" content="https://www.ejemplodetublogdeportivo.com">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Título del blog de noticias deportivas">
+  <meta name="twitter:description" content="Blog de noticias deportivas con las últimas novedades, resultados y análisis de eventos deportivos.">
+  <meta name="twitter:image" content="ruta-a-tu-imagen.jpg">
+  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <title>SBN - Argentina</title>
 </head>
 <body>
   <header class="fixed-top">
