todo linkeado y simil entre paginas

--- a/galeria.html
+++ b/galeria.html
@@ -18,7 +18,8 @@
   <meta name="twitter:image" content="ruta-a-tu-imagen.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/style.css">
-  <title>SBN proyecto</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <title>SBN - Galeria</title>
 </head>
 
 <body id="bodyTop">
