--- a/acerca-de.html
+++ b/acerca-de.html
@@ -19,7 +19,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-  <title>SBN - Argentina</title>
+  <title>SBN - About us</title>
 </head>
 <body>
   <header class="fixed-top">
