--- a/login.html
+++ b/login.html
@@ -17,10 +17,10 @@
     <meta name="twitter:image" content="ruta-a-tu-imagen.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <title>SBN - Login</title>
   </head>
 
-    <title>Formulario de Inicio de Sesión</title>
 
 <body>
   <div class="container">
