entrada de blog terminada

--- a/entradaBlog.html
+++ b/entradaBlog.html
@@ -95,14 +95,14 @@
   <!-- main -->
 
   <main>
-    <div class="container text-center">
+    <div class="container-fluid text-center text-white">
       <img src="./img/messiSlider.jpg" alt="deporte" class="imgStyle">
       <h1 class="text-center my-3"> Titulo del articulo</h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-9">
-          <div>
+          <div class="text-white">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
               Unde repellat veritatis ratione nam", vitae quam tempora consequuntur non facilis laborum facere expedita numquam voluptatem aut molestias neque fuga dolorum eligendi.
             Dignissimos, molestiae atque! Illo laboriosam  officiis ducimus adipisci? Aperiam quo, vel optio ut perferendis ipsam eius voluptatum
@@ -113,35 +113,107 @@
         <div class="col-3">
           <img src="./img/messiPost.webp" alt="imagen" class="imgStyle2">
         </div>
-      </div>
-    </div>
-    <form>
-      <div class="container col-8">
-        <h1>Comentarios</h1>
-          <div class="card">
-            <div class="card-body">
-              <div class="form-group">
-                <label for="nombre">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
-                <label for="comentario">Comentario:</label>
+        <div class="col-12 mt-4">
+          <form action="">
+            <div class="card">
+              <div class="card-body">
+                <div class="form-group">
+                  <label for="nombre">Nombre:</label>
+                  <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre" required>
+                  <label for="comentario">Comentario:</label>
+                  <textarea class="form-control" id="comentario" rows="3" placeholder="Ingresa tu comentario" required></textarea>
+                  <button type="submit" class="btn btn-primary my-2">Enviar Comentario</button>
+                </div>
               </div>
-              <div class="form-group d-flex justify-content-end flex-wrap">
-                <textarea class="form-control" id="comentario" rows="3" placeholder="Ingresa tu comentario"></textarea>
-                <button type="submit" class="btn btn-primary my-2">Enviar Comentario</button>
             </div>
+          </form>
         </div>
-            </form>
-            <div class="media d-flex justify-content-center">
-              <img src="./img/descarga.jpg1.jpg" alt="sss" class="imgComent">
-              <div class="media-body"> 
-                <p class="nombre">Homero <span> 3:30am, hoy</span></p>
-                <p class="comentario"> Lorem ipsum dolor, sit amet cons
+        <div class="col-12 mt-3">
+          <div class="media d-flex justify-content-center card">
+            <div class="mediaHeader d-flex">
+              <img src="./img/homero.jfif" alt="sss" class="imgComent">
+              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+            </div>
+            <div class="media-body">
+              <p class="comentario"> Lorem ipsum dolor, sit amet cons
                   ectetur adipisicing elit. Dolores id tempore 
                   laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
                   acilis harum libero aut
-                  em dolore qui delectus quisquam quae debitis.</p>
-              </div>
-     </div>
+                  em dolore qui delectus quisquam quae debitis.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 mt-3">
+          <div class="media d-flex justify-content-center card">
+            <div class="mediaHeader d-flex">
+              <img src="./img/homero.jfif" alt="sss" class="imgComent">
+              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+            </div>
+            <div class="media-body">
+              <p class="comentario"> Lorem ipsum dolor, sit amet cons
+                  ectetur adipisicing elit. Dolores id tempore 
+                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
+                  acilis harum libero aut
+                  em dolore qui delectus quisquam quae debitis.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 mt-3">
+          <div class="media d-flex justify-content-center card">
+            <div class="mediaHeader d-flex">
+              <img src="./img/homero.jfif" alt="sss" class="imgComent">
+              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+            </div>
+            <div class="media-body">
+              <p class="comentario"> Lorem ipsum dolor, sit amet cons
+                  ectetur adipisicing elit. Dolores id tempore 
+                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
+                  acilis harum libero aut
+                  em dolore qui delectus quisquam quae debitis.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 mt-3">
+          <div class="media d-flex justify-content-center card">
+            <div class="mediaHeader d-flex">
+              <img src="./img/homero.jfif" alt="sss" class="imgComent">
+              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+            </div>
+            <div class="media-body">
+              <p class="comentario"> Lorem ipsum dolor, sit amet cons
+                  ectetur adipisicing elit. Dolores id tempore 
+                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
+                  acilis harum libero aut
+                  em dolore qui delectus quisquam quae debitis.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 my-3">
+          <div class="media d-flex justify-content-center card">
+            <div class="mediaHeader d-flex">
+              <img src="./img/homero.jfif" alt="sss" class="imgComent">
+              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+            </div>
+            <div class="media-body">
+              <p class="comentario"> Lorem ipsum dolor, sit amet cons
+                  ectetur adipisicing elit. Dolores id tempore 
+                  laboriosam, minus omnis unde suscipit voluptas maxime perspiciatis reiciendis f
+                  acilis harum libero aut
+                  em dolore qui delectus quisquam quae debitis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- footer -->
