--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Messi sobre el mundial 2026</h5>
                 <p class="card-text fs-4">La frase con la que Lionel Messi dio a entender su presencia en el mundial 2026.</p>
-                <a href="#" class="btn btn-leer fw-bold text-light">Leer</a>
+                <a href="entradaBlog.html" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- post/card2 -->
@@ -160,7 +160,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Los Pumas 7's en cuartos</h5>
                 <p class="card-text fs-4">El seleccionado de rugby 7 de los Pumas clasificaron a cuartos de final en la copa oro de Londres y sueñan con un título nuevo.</p>
-                <a href="#" class="btn btn-leer fw-bold text-light">Leer</a>
+                <a href="entradaBlog.html" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- post/card3 -->
@@ -169,7 +169,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Denver Nuggets campeones de la NBA 2023</h5>
                 <p class="card-text fs-4">Con un desempeño extraordinario Denver se impuso frente a Miami por 4-1 y se consagró campeón de la NBA por primera vez en su historia.</p>
-                <a href="#" class="btn btn-leer fw-bold text-light">Leer</a>
+                <a href="entradaBlog.html" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- paginacion -->
