--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <meta name="twitter:description" content="Blog de noticias deportivas con las últimas novedades, resultados y análisis de eventos deportivos.">
     <meta name="twitter:image" content="ruta-a-tu-imagen.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
     <title>SBN - Login</title>
   </head>
@@ -26,40 +26,41 @@
   <main>
 
     <div class="container mt-5 mb-5">
-      <div class="row">
-          
+      <div class="row">   
         <div class="col-sm-12 col-md-12 col-lg-12">
-          <div class="form-container mt-5 mb-5">
-            <div class="image-section">
-              <img src="/img/siluetaUsuario.png" alt="silueta de usuario" class="img-fluid">
+          <div class="container row mt-5 mb-6 justify-content-center">
+            <div class="image-section col-12 col-lg-5 d-flex justify-content-center align-items-center">
+                <img src="/img/siluetaUsuario.png" alt="silueta de usuario" class="imgLogin">
             </div>
-            <div class="form-section">
-              <h2>Iniciar Sesión</h2>
-              <form>
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+            <div class="form-section col-12 col-lg-5">
+              <div class="card p-3">
+                <h2>Iniciar Sesión</h2>
+                <form>
+                  <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+                  </div>
+                  <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Ingresar</button>
+                </form>
+                <div class="mt-3">
+                  <a href="#" class="text-light">Olvidé mi contraseña</a> | <a href="#" class="text-light">Registrarme</a>
                 </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label">Contraseña</label>
-                  <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
-                </div>
-                <button type="submit" class="btn btn-primary">Ingresar</button>
-              </form>
-              <div class="mt-3">
-                <a href="#">Olvidé mi contraseña</a> | <a href="#">Registrarme</a>
+                <div class="social-links">
+                  <div class="text-center mt-4">
+                    <a href="#" class="btn btn-light btn-block">
+                      <img src="/img/google.svg" alt="Google" class="me-2"> Ingresar con Google
+                    </a>
+                  </div>
+                  <div class="text-center mt-2">
+                    <a href="#" class="btn btn-light btn-block">
+                      <img src="/img/facebook.svg" alt="Facebook" class="me-2"> Ingresar con Facebook
+                    </a>
+                  </div>
               </div>
-              <div class="social-links">
-                <div class="text-center mt-4">
-                  <a href="#" class="btn btn-light btn-block">
-                    <img src="/img/google.svg" alt="Google" class="me-2"> Ingresar con Google
-                  </a>
-                </div>
-                <div class="text-center mt-2">
-                  <a href="#" class="btn btn-light btn-block">
-                    <img src="/img/facebook.svg" alt="Facebook" class="me-2"> Ingresar con Facebook
-                  </a>
-                </div>
               </div>
             </div>
           </div>
