--- a/login.html
+++ b/login.html
@@ -23,6 +23,72 @@
 
 
 <body>
+
+  <header class="fixed-top border-navbar">
+    <nav class="navbar navbar-expand-lg p-3">
+      <div class="container">
+        <div>
+          <a href="index.html"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
+        </div>
+        <button class="navbar-toggler navbar-dark border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#modalSub">
+                Suscribite
+              </button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-light fs-5" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-light fs-5" href="./acerca-de.html">Acerca de</a>
+            </li>
+          </ul>
+        </div>
+        <button class="btn">
+          <a href="login.html"><img src="./img/login 2.png" alt="img-login" width="50px"></a>
+        </button>
+      </div>
+    </nav>
+    <div class="modal fade" id="modalSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content bg-dark text-white">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirte</h1>
+          </div>
+          <p class="mx-2 mt-4 text-center">Accedé sin límites a la información más confiable del Mundo.</p>
+          <div class="modal-body">
+            <div>
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                  <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
+                  <input type="number" class="form-control" id="exampleInputCellphone" required>
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+                </div>
+                <button type="submit" class="btn btn-leer">Suscribirme</button>
+              </form>
+            </div>
+          </div>
+          <p class="text-center mt-3">Disfrutá los beneficios de suscribirte!</p>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-leer" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <main>
 
     <div class="container mt-5 mb-5">
@@ -69,6 +135,86 @@
     </div>
       
   </main>
+
+  <footer>
+    <div class="container-fluid footer text-center">
+      <div class="row text-white">
+
+        <!-- col1 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block">
+          <div>
+            <img src="img/SBN.png" alt="iconoSBN" class="iconoSBN">
+          </div>
+          <div class="py-1 d-flex justify-content-center">
+            <p class="copyright">All Rights Reserved 2023 &copy;</p>
+          </div>
+        </div>
+
+        <!-- col2 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4">
+          <div class="py-3 d-flex align-items-center justify-content-center">
+            <h3 class="text-center">Nuestras redes</h3>
+          </div>
+          <div class="d-flex justify-content-around align-items-center flex-column py-1">
+
+            <!-- red1 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
+            </div>
+
+            <!-- red2 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
+            </div>
+
+            <!-- red3 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
+            </div>
+
+            <!-- red4 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
+            </div>
+
+            <!-- red5 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- col3 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
+          <div class="py-3">
+            <h3>Mas Info</h3>
+          </div>
+          <div class="p-1">
+            <p>Blog Deportivo creado para poder mantener informado a los fanáticos del mundo de los deportes. <br> Contamos con las últimas noticias sobre los deportes más importantes y pasionales del mundo. <br> Fútbol, Rugby, Básquetbol, Automovilismo, Tenis, Etc. <br> Información actualizada de las mejores competiciones de todos los deportes.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    
 </body>
