--- a/login.html
+++ b/login.html
@@ -92,9 +92,9 @@
   <main>
 
     <div class="container mt-5 mb-5">
-      <div class="row">   
-        <div class="col-sm-12 col-md-12 col-lg-12">
-          <div class="container row mt-5 mb-6 justify-content-center">
+      <div class="row g-0">   
+        <div class="col-sm-12 col-md-12 col-lg-12 justify-content-center">
+          <div class="container row mt-5 mb-6 justify-content-center g-0">
             <div class="image-section col-12 col-lg-5 d-flex justify-content-center align-items-center">
                 <img src="/img/siluetaUsuario.png" alt="silueta de usuario" class="imgLogin">
             </div>
@@ -214,7 +214,6 @@
       </div>
     </div>
   </footer>
-  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    
 </body>
