--- a/galeria.html
+++ b/galeria.html
@@ -26,13 +26,13 @@
 
   <!-- header -->
 
-  <header class="fixed-top">
+  <header class="fixed-top border-navbar">
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
           <a href="index.html"><img src="./img/SBN-removebg-preview.png" alt="logo"></a>
         </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-dark border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -89,6 +89,7 @@
         </div>
       </div>
     </div>
+  </header>
   </header>
 
   <!-- main -->
