--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
             </form>
             <!-- lista de temas -->
             <div class="list-group pt-5">
-              <a href="#" class="list-group-item list-group-item-action active bg-dark" aria-current="true">
+              <a href="#bodyTop" class="list-group-item list-group-item-action active bg-dark" aria-current="true">
                 General
               </a>
-              <a href="#" class="list-group-item list-group-item-action">Futbol</a>
-              <a href="#" class="list-group-item list-group-item-action">Básquetbol</a>
-              <a href="#" class="list-group-item list-group-item-action">Rugby</a>
+              <a href="404error.html" class="list-group-item list-group-item-action">Futbol</a>
+              <a href="404error.html" class="list-group-item list-group-item-action">Básquetbol</a>
+              <a href="404error.html" class="list-group-item list-group-item-action">Rugby</a>
               <a class="list-group-item list-group-item-action disabled">Proximamente</a>
             </div>
             <hr>
@@ -219,7 +219,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="img/MercadoPago.jpg" class="card-img-top d-none d-lg-block" alt="mercado pago anuncio">
                 <div class="card-body">
-                  <a href="" class="text-white">
+                  <a href="404error.html" class="text-white">
                     <h5 class="card-text text-center">Proba Mercado Pago ya!</h5>
                   </a>
                 </div>
@@ -228,7 +228,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="img/spotify.jpg" class="card-img-top d-none d-md-block" alt="Spotify anuncio">
                 <div class="card-body">
-                  <a href="#" class="text-white">
+                  <a href="404error.html" class="text-white">
                     <h5 class="card-text text-center">1 mes grátis de Spotify premium</h5>
                   </a>
                 </div>
@@ -237,7 +237,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="img/fiatTipo.jpg" class="card-img-top d-none d-md-block" alt="Fiat anuncio">
                 <div class="card-body">
-                  <a href="" class="text-white">
+                  <a href="404error.html" class="text-white">
                     <h5 class="card-text text-center">Financiá hoy tu nuevo Fiat</h5>
                   </a>
                 </div>
@@ -246,7 +246,7 @@
               <div class="card d-lg-flex d-sm-none" style="width: 18rem;">
                 <img src="./img/star-plus.jpg" class="card-img-top d-none d-md-block" alt="Spotify anuncio">
                 <div class="card-body">
-                  <a href="#" class="text-white">
+                  <a href="404error.html" class="text-white">
                     <h5 class="card-text text-center">Probá Star Plus ahora!</h5>
                   </a>
                 </div>
