--- a/login.html
+++ b/login.html
@@ -113,16 +113,16 @@
                   <button type="submit" class="btn btn-primary">Ingresar</button>
                 </form>
                 <div class="mt-3">
-                  <a href="#" class="text-light">Olvidé mi contraseña</a> | <a href="#" class="text-light">Registrarme</a>
+                  <a href="404error.html" class="text-light">Olvidé mi contraseña</a> | <a href="404error.html" class="text-light">Registrarme</a>
                 </div>
                 <div class="social-links">
                   <div class="text-center mt-4">
-                    <a href="#" class="btn btn-light btn-block">
+                    <a href="404error.html" class="btn btn-light btn-block">
                       <img src="/img/google.svg" alt="Google" class="me-2"> Ingresar con Google
                     </a>
                   </div>
                   <div class="text-center mt-2">
-                    <a href="#" class="btn btn-light btn-block">
+                    <a href="404error.html" class="btn btn-light btn-block">
                       <img src="/img/facebook.svg" alt="Facebook" class="me-2"> Ingresar con Facebook
                     </a>
                   </div>
