linkeando botones de lo usado

--- a/acerca-de.html
+++ b/acerca-de.html
@@ -128,10 +128,10 @@
       <div class="justify-content-center flex-column align-items-center mb-5 d-none d-md-flex">
         <p class="text-light fw-bold"> Para desarrollar éste proyecto usamos:</p>
         <div class="button-rounded-container d-flex justify-content-center">
-          <a href="#" class="button-rounded">HTML</a>
-          <a href="#" class="button-rounded">CSS</a>
-          <a href="#" class="button-rounded">BOOTSTRAP</a>
-          <a href="#" class="button-rounded">GIT & GITHUB</a>
+          <a href="https://dev.w3.org/html5/spec-LC/" class="button-rounded" target="_blank">HTML</a>
+          <a href="https://www.w3.org/Style/CSS/Overview.en.html" class="button-rounded" target="_blank">CSS</a>
+          <a href="https://getbootstrap.com" class="button-rounded" target="_blank">BOOTSTRAP</a>
+          <a href="https://github.com" class="button-rounded" target="_blank">GIT & GITHUB</a>
         </div>
       </div>
     </div>
