--- a/entradaBlog.html
+++ b/entradaBlog.html
@@ -95,7 +95,7 @@
   <!-- main -->
 
   <main>
-    <div class="container-fluid text-center text-white">
+    <div class="container text-center text-white">
       <img src="./img/messiSlider.jpg" alt="deporte" class="imgStyle">
       <h1 class="text-center my-3"> Titulo del articulo</h1>
     </div>
