--- a/entradaBlog.html
+++ b/entradaBlog.html
@@ -132,7 +132,7 @@
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
               <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario"> Lorem ipsum dolor, sit amet cons
@@ -149,7 +149,7 @@
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
               <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario"> Lorem ipsum dolor, sit amet cons
@@ -166,7 +166,7 @@
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
               <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario"> Lorem ipsum dolor, sit amet cons
@@ -183,7 +183,7 @@
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
               <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario"> Lorem ipsum dolor, sit amet cons
@@ -200,7 +200,7 @@
           <div class="media d-flex justify-content-center card">
             <div class="mediaHeader d-flex">
               <img src="./img/homero.jfif" alt="sss" class="imgComent">
-              <p class="nombre align-self-center">Homero <span> 3:30am, hoy</span></p>
+              <p class="nombre align-self-center">Homero <br> <span> 3:30am, hoy</span></p>
             </div>
             <div class="media-body">
               <p class="comentario"> Lorem ipsum dolor, sit amet cons
